convert index from raw number

--- a/OrderBrushing.ipynb
+++ b/OrderBrushing.ipynb
@@ -232,7 +232,7 @@
     "df2 = df\n",
     "\n",
     "for i, row in df2.iterrows():\n",
-    "    if i == 222749:\n",
+    "    if i == (len(df2)-1):\n",
     "        break\n",
     "    \n",
     "    else:\n",
@@ -741,7 +741,7 @@
     "    else:\n",
     "        temp_userid.append(row['userid'])\n",
     "        \n",
-    "    if i!= 3406:\n",
+    "    if i!= (len(sus_order)-1):\n",
     "        next = sus_order['shopid'][i+1]\n",
     "    else:\n",
     "        next = 0\n",
