--- a/OrderBrushing.ipynb
+++ b/OrderBrushing.ipynb
@@ -756,7 +756,7 @@
     "        new_shopid.append(temp_shopid)   \n",
     "        new_userid.append(finalize_temp_userid)\n",
     "        \n",
-    "        if i != 3406:\n",
+    "        if i != (len(sus_order)-1):\n",
     "            temp_shopid = 0\n",
     "            temp_userid.clear()\n",
     "            finalize_temp_userid = \"\"\n",
